--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <div class="minicontainer">
             <div class="text">
                 <div class="title">
-                    This website is awesome!
+                    Test website!
                 </div>
                 <div class="subtext">
-                    This website has awesome subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+                    This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
                 </div> 
                 <button>Sign up</button> 
             </div>
